Minor update related to db